kube/prod/network-policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: microservices
spec:
  podSelector:
    matchLabels:
      network-group: microservices
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: nats
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: postgresql
      - podSelector:
          matchLabels:
            helm.neo4j.com/neo4j.name: linkedout
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: minio
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coredns-egress
spec:
  podSelector:
    matchLabels:
      network-group: microservices
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - protocol: UDP
        port: 53
